# code-review-agent

./: .dockerignore  .env.example  .gitignore  .hintrc  DockerFile  README.md  alembic.ini  config.toml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
app/: __init__.py  main.py
app/agents/: __init__.py  ai_workflow.py  analyzer.py
app/agents/tools/: __init__.py  ai_tools.py  github_tools.py  python_tools.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  analyze.py  status.py
app/config/: __init__.py  database.py  settings.py
app/models/: __init__.py  database.py  schemas.py
app/services/: __init__.py  github.py  llm_service.py
app/tasks/: __init__.py  analyze_tasks.py  celery_app.py
app/utils/: __init__.py  exceptions.py  language_detection.py  logger.py  redis_client.py
migrations/: README  env.py
migrations/versions/: 3c2ca23d9227_drop_overall_anaysis_from_task_.py  80e07be09f0e_drop_file_metrics_from_the_ai_analysis.py  ac105fcf9417_initial_migration.py  e60ea05371b9_drop_suggestions_columns_from_file_.py
tests/: __init__.py  conftest.py
tests/integration/test_api/: test_status_endpoints.py
tests/unit/test_config/: test_settings.py
tests/unit/test_models/: test_database_models.py  test_schemas.py
tests/unit/test_services/: test_github_service.py
tests/unit/test_utils/: test_language_detection.py
